# start/routes.ts
@@ -65,6 +65,7 @@ router.get('/', () => {
 router
   .group(() => {
     router.post('accounts', [controllers.user.Account, 'store'])
+    router.get('accounts/username-availability', [controllers.user.UsernameAvailability, 'show'])
     router
       .post('media-assets', [controllers.mediaAsset.MediaAssets, 'store'])
       .use(middleware.auth())
